--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,6 @@
 -翻新了何东线的文案、icon、国策效果
 -调整了FNG的部分内容，并修复了一些BUG
+-修复了朱德错误宣称国民党左派领导权的BUG
+-修复了山东在成为狗之后还能因为德意志的影响力变成德国傀儡的BUG
 -为大明新增了几个都护府
--添加了更多趣味事件，并为部分事件添加了一些配图
+-添加了更多趣味事件（主要是上海教会线），并为部分事件添加了一些配图
