--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1096,8 +1096,8 @@
  Shcjidu.14.d:0 "被我们资助的上海教会终于发了寻求庇护的消息，但是我们和法国佬的战火迫在眉睫，我们该怎么选？"
  Shcjidu.14.a:0 "欢迎加入帝国公约！"
  Shcjidu.14.b:0 "代价太大了"
- Shcjidu.15.t:0 "上午六点二十五分"
- Shcjidu.15.d:0 "费诺·张站在窗前，手指无意识地揉搓着一枚古旧的圣母像吊坠，目光落在外滩那片已然焕然一新的旗帜之上。金色的圣彼得十字在微风中猎猎作响，宣示着这座城市的新主人。他本该感到欣慰，甚至骄傲——毕竟，他曾在弥撒时虔诚地祈祷，祈求主的光辉降临上海，使这片土地免于罪恶与腐朽。如今，主的国度似乎终于降临了，可为何他的心中仍然泛起不安？\n\n大街上的巡逻队伍步伐整齐，他们佩戴的徽章上镌刻着圣心的图案，枪支在阳光下闪着冷冽的光。教堂钟声回荡在空气里，仿佛在向世人宣告这一切的必然性。然而，费诺·张仍然记得昨夜听到的低语。有人在巷弄间传递着忧虑，有人低声诅咒这突如其来的变革。\n\n他回想起那日，在圣依纳爵堂前，几位神父庄重地宣读新政府的布告，誓言以主的公义重塑上海。他站在人群中，看见有信徒欢欣鼓舞，亦有人沉默低头。他想起昔日里那些在赌坊与舞厅流连的浪子，如今或许被迫跪在祭坛前忏悔，亦或是被拖入黑暗之中，再无人知晓他们的下落。\n\n窗外，传来几声急促的哨声，几辆挂着教会旗帜的汽车驶过，卷起阵阵尘土。他叹了口气，将吊坠攥紧在手心。上海确实变了，变得圣洁，变得肃穆，变得...陌生。他曾经渴望的那片乐土，如今就在眼前，可他却不知自己是否仍是它的一部分。"
+ Shcjidu.15.t:0 "上午六点整"
+ Shcjidu.15.d:0 "费诺·张站在窗前，手指无意识地揉搓着一枚古旧的圣母像吊坠，目光落在外滩那片已然焕然一新的旗帜之上。金色的圣彼得十字在微风中猎猎作响，宣示着这座城市的新主人。他本该感到欣慰，甚至骄傲——毕竟，他曾在弥撒时虔诚地祈祷，祈求主的光辉降临上海，使这片土地免于罪恶与腐朽。如今，主的国度似乎终于降临了，可为何他的心中仍然泛起不安？\n\n大街上的巡逻队伍步伐整齐，他们佩戴的徽章上镌刻着圣心的图案，枪支在阳光下闪着冷冽的光。教堂钟声回荡在空气里，仿佛在向世人宣告这一切的必然性。然而，费诺·张仍然记得昨夜听到的低语。有人在巷弄间传递着忧虑，有人低声诅咒这突如其来的变革。\n\n他回想起那日，在圣母大教堂前，几位神父庄重地宣读新政府的布告，誓言以主的公义重塑上海。他站在人群中，看见有信徒欢欣鼓舞，亦有人沉默低头。他想起昔日里那些在赌坊与舞厅流连的浪子，如今或许被迫跪在祭坛前忏悔，亦或是被拖入黑暗之中，再无人知晓他们的下落。\n\n窗外，传来几声急促的哨声，几辆挂着教会旗帜的汽车驶过，卷起阵阵尘土。他叹了口气，将吊坠攥紧在手心。上海确实变了，变得圣洁，变得肃穆，变得...陌生。他曾经渴望的那片乐土，如今就在眼前，可他却不知自己是否仍是它的一部分。"
  Shcjidu.15.a:0 "主啊，这是祢的旨意吗？"
  Shcjidu.16.t:0 "上午九点四十五分"
  Shcjidu.16.d:0 "钟声敲响，余音在梵蒂冈式穹顶下回荡。费诺·张跪在长椅前，指尖缓缓划过手中的念珠，口中低声诵念《诗篇》：“耶和华是我的牧者，我必不至缺乏。”（诗篇 23:1）教堂内氤氲着焚香的气息，窗外的天色仍显昏暗，东方的晨曦尚未破开夜的残影。\n\n昨日傍晚，他亲眼见证了苏州河畔的那场焚烧——堆积如山的书册、画作、留声机唱片，在火光中化为焦黑的灰烬。站在教会卫队前的神父高声宣读：“不可爱世界和世界上的事。人若爱世界，爱父的心就不在他里面。”（约翰一书 2:15）人群中的信徒默默聆听，或是低声念诵圣咏，而那些曾将手稿交给印刷商的文人、曾在留声机前沉醉的歌者，只能在暗处沉默。\n\n火焰映照在一张张肃穆的面孔上，有人狂喜，也有人默然。费诺·张望向燃烧的书页，火舌贪婪地吞噬一行行墨迹。就在其中，他瞥见了一册《神曲》的残页，风将它吹起，飞旋着落入尘埃。他读到了那句尚未被焚尽的诗句：“抛弃一切犹豫，进入此地。”\n\n他的心头掠过一丝不安，却迅速将之压下。他该感到欣慰，正如教士所言，“弃绝谬误，方能归于真理。”上海已被洗涤，罪恶已被焚尽，如今是主的国度。然而，为何他的耳畔仍能听见隐约的哭声？"
@@ -1129,6 +1129,12 @@
  Shcjidu.25.t:0 "上海易主"
  Shcjidu.25.d:0 "看来中国的混乱更近一步了，远东最大的城市上海今日爆发了一场剧烈的争斗战，最终由德国人扶持的上海天主教会取得了最终的胜利，他们正在接管这座城市的方方面面，用他们的法令规训这座繁华都市，无论如何中国舞台上的玩家又要多一个了。"
  Shcjidu.25.a:0 "日期满了，神的国近了。你们要悔改，信福音！"
+ Shcjidu.26.t:0 "光与影之间"
+ Shcjidu.26.d:0 "上午10点，工厂的汽笛准时响起，震动着砖墙与钢梁，将昨夜的湿气从空气中驱散。林海生放下手中的工具，活动了一下酸痛的肩膀，目光顺着灰蒙蒙的天光投向远方——码头、仓库、厂房，这些是他熟悉的世界，而现在，这个世界正悄然发生变化。\n\n几天前，教会派人来到工厂，在礼堂里召集工人们开了一次会。说是会，其实更像是一场布道。穿着黑色长袍的神父站在台上，双手交叠，语气温和却带着不容置疑的坚定：“你们的劳动是神圣的，主关怀每一个辛勤工作的人。我们将成立新的工会，为你们争取更合理的待遇，让你们不再受资本家的压榨。”\n\n林海生坐在人群里，双手环抱着胸口，眼神在神父与身旁的工友们之间游移。他从未信仰过什么神明，也从未想过自己的汗水和劳苦会被赋予“神圣”二字。他知道工会是什么——在过去，那些私下聚集的工人，哪怕只是多说一句工资太低，都会被巡捕房带走，棍棒和牢狱是他们的下场。而现在，教会要成立自己的工会，工头们却只是冷眼旁观，没有阻拦，甚至还在会后安抚大家：“神父们不会害你们。”\n\n他不相信这些话。\n\午休时，工友们围在一起讨论，有人兴奋，有人犹豫。“教会办工会，至少比资本家好吧？”一个年轻工人说，声音里带着几分期待，“他们不是说了吗？要给我们更好的待遇。”“待遇？”林海生冷笑了一声，抬手指了指天，“等他们真让老板加薪了，太阳都要从西边出来。”人群沉默了一瞬，有人低声道：“可这座城已经变了。”变了。是的，变了。自从教会接管上海，街上的赌场和烟馆被关闭，妓院成了“赎罪所”，原本夜夜狂欢的夜总会如今只剩下废弃的霓虹灯在风中晃荡。而现在，教会的手终于伸到了工厂里。“我只想知道，他们的工会，到底是为了谁？”林海生低声问，像是自言自语。\n\n没人能回答他。\n\n下午，神父们又来了。他们走过工厂的通道，黑色长袍在灰尘与机油的空气里显得格外醒目。工头亲自带着他们巡视，一边点头哈腰，一边向工人们介绍：“这是教会派来的代表，未来的工会负责人。”神父们微笑着，眼神穿过每一张疲惫的面孔，带着某种不容置疑的仁慈。林海生与其中一个神父对视了一瞬，那目光让他感到一种莫名的不安。他低下头，假装专注于手中的活计，而那道目光仍然落在他身上，仿佛要将他看透。"
+ Shcjidu.26.a:0 "是保护，还是新的枷锁？"
+ Shcjidu.27.t:0 "信仰与钢铁"
+ Shcjidu.27.d:0 "工厂的炉火燃烧了一整夜，余热尚未散尽，空气中弥漫着焦灼的铁锈味。林海生坐在一堆刚锻造完的钢轨旁，双手搭在膝盖上，指尖还残留着灰烬。他盯着远方天际逐渐泛白的晨光，像是看着一片即将翻开的新书页，但他知道，这书页上写的字，未必是他想读的。\n\n在新工会成立的那天，教会在工厂礼堂里办了场隆重的仪式，神父们在圣像前宣读工会的宗旨，工头们毕恭毕敬地站在台下，资方的代表也来了，满脸堆笑地与神父们握手寒暄。林海生没有去——他不信教，也不信那些穿着长袍、手握圣书的人能真正改变工人的命运。可到了今天早晨，他却被工头点了名，派去市政厅修缮门前的铁栏杆。\n\n“工头特意挑了你。”同伴压低声音，语气有些怪异，“听说教会的人要来，工头说你手艺好，不能让那些神父看了笑话。”林海生冷哼了一声，拎起工具袋出了门。\n\n市政厅门前，工人们正在焊接栏杆，火花在晨光下迸溅，映亮了锈迹斑斑的铁柱。林海生蹲在一旁，目光扫过四周。这座城市的秩序已经变了，街上的巡逻队换上了教会的徽章，旧政府的旗帜被收起，连市政厅门口的石碑都刻上了新的铭文。“先生，这里灰尘很大，还有危险，您站远些。”他抬起头，看见一个穿着黑色长袍的男人站在不远处，目光平静地注视着他。那是一张陌生的脸，年轻，神色沉静，却带着几分疲倦。他的手上捧着一本厚重的《圣经》，但不知为何并没有被翻开，那人只是轻轻摩挲着封皮。\n\n“这位神父，您是来看工地的吗？”林海生随口问道，手上的活计没停。“我是来了解工人的情况。”男人答道，声音低沉，却带着不容忽视的力量。林海生嗤笑一声：“了解？神父，您怕是没在这行里待过吧？炉火烫不烫，锤子沉不沉，资本家的剥削狠不狠，工友们的日子好不好过，光靠看看是看不出来的。”男人沉默了一瞬，随后走到他的身旁，蹲下身，指尖触碰到尚未冷却的铁栏杆，微微皱眉。“很烫。”他说。“那是当然。”林海生淡淡道，“打铁的人就是这样，吃的是火里的饭。”\n\n男人看了他一眼，缓缓说道：“我叫费诺·张。”这名字让林海生的动作停顿了一瞬。他听过这个名字，在工人们私下里聊天中，在街头的布告栏上，传言说他是最虔诚的神父，为此常常与主教们发生争执，还有人说那两位总主教似乎对他也颇有意见。可如今，这个名声赫赫的人，却蹲在他身旁，像个普通人一样碰着未冷的铁栏杆。“神父。”林海生缓缓开口，带着犹豫又带着些许坚定道，“工人们都说，教会是新的主人，那个工会不过是新的枷锁。您怎么看？”费诺·张没有立刻回答，他沉默地注视着栏杆上的铁锈，良久，才低声说道：“工会本该保护工人，而非束缚他们。”林海生听出了他话中的犹豫。他突然觉得有些有趣——在这座被教会掌控的城市里，连神父都开始怀疑自己是否站在正确的一边了吗？\n\n他站起身，拍了拍身上的灰：“神父，我不懂什么大道理，我只知道一点——铁是火炼出来的，越烧越硬。你们的工会，到底是想让工人更硬气，还是更顺服？”费诺·张没有回答，只是望着他，眼中映着铁锈的颜色。林海生笑了笑，拾起工具，继续敲打着栏杆。铁锤落下，火花四溅，在晨光里映出一道耀眼的弧线。"
+ Shcjidu.27.a:0 "新秩序降临，可连信仰者都在疑问。"
 
 ###新教
  SHC_CHR: "上海总教区"
