--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -971,21 +971,30 @@
  LEC_TZ_T_DEF: "中华民国"
 
  LEC_yu_bing_for: "于斌"
+ LEC_yu_bing_for_desc: "§Y生于：§!§L1901年4月13日；大清黑龙江将军呼兰府兰西县§!\n§Y背景：§!§L$POLITICS_YU_BING_DESC$§!"
  LEC_yu_bing_hog: "于斌"
+ LEC_yu_bing_hog_desc: "§Y生于：§!§L1901年4月13日；大清黑龙江将军呼兰府兰西县§!\n§Y背景：§!§L$POLITICS_YU_BING_DESC$§!"
  LEC_zhou_ji_si_sec: "周济世"
+ LEC_zhou_ji_si_sec_desc: "§Y生于：§!§L1892年1月23日；大清直隶省正定府藁城县小广扬村§!\n§Y背景：§!§L周济世23岁时在北平市栅栏加入遣使会。27岁时在北平宗座代牧区石门晋铎。1931年3月26日，周济世在39岁时获时任教宗庇护十一世任命为河北省保定宗座代牧区宗座代牧，领衔土耳其克拉蒂亚教区主教。同年8月2日，在北平市由北平宗座代牧满德贻主教主礼，河北宣化宗座代牧程有猷主教襄礼，河北易县宗座监牧马迪懦主教共祭。§!"
  LEC_zhu_zhi_yao_eco: "朱志尧"
+ LEC_zhu_zhi_yao_eco_desc: "§Y生于：§!§L1863年9月7日；大清帝国、上海特别市§!\n§Y背景：§!§L朱志尧出生于上海南市董家渡，董家渡朱家自康熙年间便笃信天主教，朱志尧也因此受天主教洗礼后取教名“尼格老”（Nicolas）。早年朱志尧就读耶稣会在上海徐家汇创办、二舅马相伯担任校长的徐汇公学，学习法语和自然科学。1880年代曾数次作为随员随舅父马相伯、马建忠出访欧美。1882年，朱家遭遇风灾和火灾，沙船业和钱庄均遭受重大损失，父亲朱朴斋一病不起。于是朱志尧开始从商，担任沙船上的“耆民”（经理）。1886年，三舅马建忠任轮船招商局总办，1888年介绍朱志尧担任江天轮（行驶上海、宁波航线）、江裕轮（行驶上海、汉口航线）的“坐舱”（承包人）。由于其表现出色，虽然马建忠于1891年被盛宣怀排挤出轮船招商局，但是盛宣怀仍然留用了朱志尧。其间在1893年，他第9次参加科举考试，考中青浦县附生。1897年，盛宣怀任命朱志尧为大德榨油厂总办，创办该厂，试制成功新式棉籽榨油机。1898年，帮助筹建法商东方汇理银行上海分行的弟弟朱云佐去世，于是朱志尧由马相伯、马建忠推荐，接替朱云佐出任东方汇理银行买办，次年，东方汇理银行上海分行在上海法租界内正式营业，1911年迁入外滩29号大楼。戊戌变法时期，朱志尧创办《格致新报》，鼓吹实业救国。1904年，他投资创办求新制造机器轮船厂，厂址在南市黄浦江边。求新厂在5年内为张謇的大达轮船公司、英商马立斯轮船公司等制造了48艘船舶；1910年研制成功中国第一台新式火油内燃机。在第一次世界大战中，由于钢材价格暴涨，求新厂出现经营亏损，所欠东方汇理银行的近400万元债务无力偿还，资不抵债，几经交涉，在1919年8月27日宣布求新厂“中法合办”，其中法商60万两，中国官股50万两，朱志尧商股10万两，但是官股和朱氏商股均由东方汇理银行代垫。朱志尧失去求新厂以后，将经营重点转向航运业。1923年，他创办大通仁记航业公司，专驶上海至扬州航线。1927年退出东方汇理银行后，1928年与幼弟朱季琳合办合众航业公司，专开连云港航线。1930年，再在王家码头南侧创立合众码头仓库公司，开辟阜宁航线。这3个航运公司经营苏北航线，都取得了成功，成为可与大达轮船公司虞洽卿相匹敌的“航运大王”。而华商电气公司的业务也取得了巨大成功，供电范围远达徐家汇教会区和浦东，有轨电车的轨道也在南市区继续延伸，盈利颇多。§!"
  LEC_zhang_xiu_ya_sec: "张秀亚"
+ LEC_zhang_xiu_ya_sec_desc: "§Y生于：§!§L1919年9月16日；大清帝国、直隶省沧县§!\n§Y背景：§!§L1919年出生于河北省沧县，父张里鹏 （字云鹏），母陈芹，排名幺女。7岁随全家迁居天津，入天津天主教贞淑小学，是张秀亚接近文学的开始。9岁开始于报纸之儿童周刊发表作品。12岁考入河北省立第一女子师范学院（今天津艺术学院），同窗有日后的女作家罗兰、王怡之。15岁在《益世报》的文学周刊分别发表诗作〈夏天的晚上〉、〈秋之夜〉。发表文章时，以“陈蓝”的名字写散文，以“张亚蓝”的名字写小说同书评，用本名“张秀亚”写些小诗，经常发表园地有《益世报》、《国闻周报》、《大公报》。17岁第一本短篇小说集《大龙河畔》于天津海风社出版，不数年便赢得“北方最年轻女作家”的美誉。§!"
  LEC_hui_ji_liang_hog: "惠济良"
+ LEC_hui_ji_liang_hog_desc: "§Y生于：§!§L1877年10月1日；法国布列塔尼、埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
  LEC_hui_ji_liang_for: "惠济良"
+ LEC_hui_ji_liang_for_desc: "§Y生于：§!§L1877年10月1日；法国布列塔尼、埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
  LEC_lei_ming_yuan_eco: "雷鸣远"
+ LEC_lei_ming_yuan_eco_desc: "§Y生于：§!§L1877年8月19日；比利时弗拉芒大区东法兰德斯省根特§!\n§Y背景：§!§L雷鸣远本名文森·勒贝，洗名文森，汉名雷鸣远，字振声。1877年8月19日，雷鸣远生于比利时佛兰芒大区根特城一个虔诚的天主教家庭，父亲是佛兰芒人，担任公证人，母亲是有一半法国血统的英国人。他是家中长子，洗名文森（Vincent）。11岁时，阅读1840年在中国武昌殉教的董文学神父传记后，立志前往中国传教。1895年，在巴黎，加入董文学神父所属的遣使会。于神学院就读期间，1900年中国发生义和团运动，比利时传教士韩默理主教在内蒙古殉教，更促成雷鸣远决定前往中国传教。1901年，雷鸣远随北京教区的樊国梁主教乘船来华。同年10月28日，在北京成为神父，随后被派往武清县小韩村等地传教。1903年，雷鸣远主持重建在义和团运动中被损毁的小韩村教堂。雷鸣远到达中国传教后，努力学习中国文化，读中国书，能说一口流利标准的国语，用毛笔写漂亮的行书，穿中国服装，遵守中国习俗。雷鸣远因此吸引了一批天津的中国知识分子的关注，其中数十人加入天主教。1912年，从北京教区分出天津教区，传教成绩奇佳的雷鸣远，便升任这个新教区的副主教。1927年，雷鸣远申请中国国籍获准，始被法国放行来华。在河北省中国籍主教孙德桢领导的安国教区更积极地传教，并创立耀汉小兄弟会（1928年）和德来小姊妹会。雷神父于1933年7月脱离遣使会，翌年加入自己创立的耀汉小兄弟会，并发圣愿。§!"
  LEC_Thomas_Tien_Ken_sin_for: "田耕莘"
+ LEC_Thomas_Tien_Ken_sin_for_desc: "§Y生于：§!§L1890年10月24日；大清帝国、山东省阳谷县张秋镇§!\n§Y背景：§!§L1890年10月24日，田耕莘生于山东省阳谷县张秋镇。自幼家贫，父早逝，随福若瑟神父居住阳谷县坡里庄圣堂，1901年（11岁）受洗，后入兖州修院，1918年6月9日，田耕莘在兖州天主圣神主教座堂由主教韩宁镐祝圣为神父。1929年3月8日在荷兰进入圣言会。1931年2月7日，发愿终生为圣言会会士。1934年11月23日，任阳谷监牧§!"
 
  LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
 
  SHC_Hui_Ji_liang: "惠济良"
  POLITICS_HUI_JI_LIANG_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
  SHC_yu_bing: "于斌"
- POLITICS_YU_BING_DESC:0 "于斌，圣名保禄，号野声，黑龙江省海伦县人，出生于黑龙江兰西县。于家祖籍山东省昌邑县的于家莊，清朝末年，于斌的曾祖父于文成闯关东来到黑龙江。在于斌6岁时，父亲于水源去世，7岁时母亲萧氏也去世。因此于斌是由祖父母抚养长大，祖父为中医，生活并不富裕，也和其他乡村少年一样为家中放猪，但有机会进私塾接受教育。1912年，于斌11岁时，他的祖父母迁居到海伦县若瑟屯，这件事对于斌一生的影响极大。因为若瑟屯正是黑龙江省最重要的一个天主教村庄，正如河北省的东闾村、山西省的六合村和察哈尔省的西湾子一样，这一类天主教村庄绝大部分家庭都是天主教徒，宗教气氛浓郁，是各教区内年轻神父和修女的主要来源地，也是天主教会抱以厚望的发展基地。地处塞外的若瑟屯在这一类天主教村庄中资历最浅，在1902年才由法国巴黎外方传教会的神父陆恒之创建，但几年间吸引来上百户天主教徒，于斌的祖母在迁居若瑟屯后不久，就接受了天主教信仰。不久陆神父发现于斌是个可造之才，于是先后保送他进入海伦县的高等小学和黑龙江省第一师范学校就读，希望他将来能担任村里的教师。于斌在14岁那年洗礼，圣名保禄。他的号“野声”则来源于《圣经》中圣若翰洗者的旷“野”的呼“声”。\n\n1919年五四运动爆发时，于斌18岁，正在黑龙江省第一师范学校就读，他被同学们推为学生团团长，多次在街头发表演说而风靡省城。当时的黑龙江督军鲍贵卿准备逮捕他，于斌被迫辍学，返回若瑟屯避风。1920年，于斌19岁，他决定终身修道。不过因为他是家中长房唯一的男孩，祖父希望他在世俗事务上成就大事业，陆神父也劝他谨慎从事。最后由于得到祖母由氏的大力支持，于斌得以顺利进入位于吉林省城的吉林神罗修道院，先在小修道院学习拉丁文，中间到上海震旦大学预科学习法文一年即毕业，传为美谈，然后再回到吉林的大修道院学习神学。1924年时以23岁之龄被保送到罗马宗座传信大学研读哲学、神学。\n\n直到1933年，在取得了三个博士学位后，于斌离开已经居留10年的意大利罗马，圣座本想让其出任圣座大使，但他诚挚表达想回自己国家传教。他由罗马回国，回国后任中华全国公教进行会总监督。同年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区。由于斌担任南京宗座代牧区宗座代牧。\n\n1936年，由于八省内乱的硝烟日渐浓郁，南京宗座代牧区便暂时转移至上海办公，而这却给于斌带来了更大的“惊喜”..."
+ POLITICS_YU_BING_DESC:0 "于斌，圣名保禄，号野声，黑龙江省海伦县人，出生于黑龙江兰西县。于家祖籍山东省昌邑县的于家莊，清朝末年，于斌的曾祖父于文成闯关东来到黑龙江。在于斌6岁时，父亲于水源去世，7岁时母亲萧氏也去世。因此于斌是由祖父母抚养长大，祖父为中医，生活并不富裕，也和其他乡村少年一样为家中放猪，但有机会进私塾接受教育。1912年，他的祖父母迁居到海伦县若瑟屯，这件事对于斌一生的影响极大。因为若瑟屯正是黑龙江省最重要的一个天主教村庄，正如河北省的东闾村、山西省的六合村和察哈尔省的西湾子一样，这一类天主教村庄绝大部分家庭都是天主教徒，宗教气氛浓郁，是各教区内年轻神父和修女的主要来源地，也是天主教会抱以厚望的发展基地。地处塞外的若瑟屯在这一类天主教村庄中资历最浅，在1902年才由法国巴黎外方传教会的神父陆恒之创建，但几年间吸引来上百户天主教徒，于斌的祖母在迁居若瑟屯后不久，就接受了天主教信仰。不久陆神父发现于斌是个可造之才，于是先后保送他进入海伦县的高等小学和黑龙江省第一师范学校就读，希望他将来能担任村里的教师。于斌在14岁那年洗礼，圣名保禄。他的号“野声”则来源于《圣经》中圣若翰洗者的旷“野”的呼“声”。\n\n1919年五四运动爆发时，于斌18岁，正在黑龙江省第一师范学校就读，他被同学们推为学生团团长，多次在街头发表演说而风靡省城。当时的黑龙江督军鲍贵卿准备逮捕他，于斌被迫辍学，返回若瑟屯避风。1920年，于斌19岁，他决定终身修道。不过因为他是家中长房唯一的男孩，祖父希望他在世俗事务上成就大事业，陆神父也劝他谨慎从事。最后由于得到祖母由氏的大力支持，于斌得以顺利进入位于吉林省城的吉林神罗修道院，先在小修道院学习拉丁文，中间到上海震旦大学预科学习法文一年即毕业，然后再回到吉林的大修道院学习神学。1924年被保送到罗马宗座传信大学研读哲学、神学。\n\n直到1933年，在取得了三个博士学位后，于斌离开已经居留10年的意大利罗马，圣座本想让其出任圣座大使，但他诚挚表达想回自己国家传教。他由罗马回国，回国后任中华全国公教进行会总监督。同年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区。由于斌担任南京宗座代牧区宗座代牧。\n\n1936年，由于八省内乱的硝烟日渐浓郁，南京宗座代牧区便暂时转移至上海办公，而这却给于斌带来了更大的“惊喜”..."
  SHC_Morris_Abraham_Cohen: "莫里斯·亚伯拉罕·科恩"
  POLITICS_SHC_Morris_Abraham_Cohen_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年8月3日；俄罗斯帝国、俄属波兰马佐夫舍姆瓦瓦\n§Y军旅生涯：§!§g莫里斯·亚伯拉罕·科恩，绰号“双枪马坤”，是一名英国和加拿大冒险家，犹太人，孙中山的侍从官，同时也是名誉国民革命军少将。第一次世界大战期间，科恩加入加拿大铁路军团到欧洲作战，部分工作涉及监督中国劳工。他还参加西线的一些激烈战斗，特别是在第三次伊普尔战役期间。战后，他回到加拿大。但因经济下滑，房地产繁荣的日子已经过去。科恩寻找新的出路，于1922年前往中国，谈一笔铁路交易。科恩在上海下船后，去见了乔治·索科尔斯基, 这位纽约出生的记者曾为孙中山的英文上海时报工作。索科尔斯基为他安排了与孙先生的英文秘书陈友仁的见面。科恩被录用，并很快住进上海法租界莫里哀路29号孙中山家中。在上海和广州，科恩训练孙中山的小型武装部队进行拳击和射击，告诉人们他是孙中山的副官和代理上校。对于科恩来说幸运的是，虽然他的中文水平不佳 — 至多能说洋泾浜广东话 —但并不是一个问题，因为孙中山、他的妻子宋庆龄，以及他们的许多同事都接受过西方教育，能说英语。科恩的同事们开始称他为马坤，他很快就成为了孙中山的主要保护者之一。在一次战斗中他被子弹擦伤，此后科恩开始携带第二把枪。西方侨民对孙中山的持枪保护者很感兴趣，称他为“双枪科恩”。§!\n\n§Y备注：科恩尚未离开中国前就和国民党内的左派势力与工团党颇有来往，反而与右派的胡汉民、蒋介石的来往颇少。§!"
 
@@ -997,13 +1006,14 @@
  SHC_social_conservative_party_JD_long:0 "国民党(Kuomintang)\n§g国民党在[SHC.GetLeader]的领导下接受了天主教伸来的救赎之手，在原本的三民主义基底上又加上了一层天主教的色彩，如今的党员在宣布自己效忠于党与三民主义的同时也需要受洗成为一位公教徒，又出于开放包容的态度，新教徒也被允许入党。§!"
  SHC_authoritarian_democrat_party_new:0 "南京总教区"
  SHC_authoritarian_democrat_party_new_long:0 "南京总教区(Archidioecesis Nanchinensis)\n§g南京宗教区作为如今中国第一个施行圣统制，建立教区的地方，毫无疑问是中国天主教的发展中心。原本略小的圣母无染原罪始胎堂的扩建工程也提上了日程，主的传道士们将在中华完成他们的布道工作。§!"
+ SHC_national_populist_party_new:0 "洛阳教区"
+ SHC_national_populist_party_new_long:0 "洛阳教区(Dioecesis Loiamensis)"
 
  LEC_ren_ci_de_zhu:0 "主的仁慈"
  LEC_ren_ci_de_zhu2:0 "主的仁慈"
  LEC_ren_ci_de_zhu3:0 "主的垂爱"
  LEC_ren_ci_de_zhu4:0 "主的垂爱"
  LEC_tian_zhu_jiao_gong_hui:0 "天主教工会"
- LEC_tian_zhu_jiao_gong_hui2:0 "天主教工会"
  LEC_qi_shi_tuan:0 "圣方济各骑士团"
  LEC_qi_shi_tuan_desc:0 "Pro Deo et Patria（为了上帝和祖国）"
  LEC_qing_fen_shi_yi_zhong_mei_de:0 "勤奋是一种美德"
@@ -1036,7 +1046,7 @@
  LEC_kuo_jian_jiao_hui_xue_xiao:0 "扩建教会学校"
  LEC_kuo_jian_jiao_hui_xue_xiao_desc:0 "自从天主教传播到中国开始，教会学校就是中国天主教会不可缺少的一环。而将青年教育成为虔诚的天主教徒更是天主教中国未来愿景的重要一环，为此我们应当为现有的教会学校大力拨款，资助他们扩建校区，招募更多师生。" 
  LEC_pei_yang_you_de_zhi_ren:0 "培养有德之人"
- LEC_pei_yang_you_de_zhi_ren_desc:0 "良心是我们心灵的法律，但超越我们的心灵，对我们发号施令，指示责任和职务，恐惧和希望……良心是自然界中，一如恩宠界中的那位传讯者，透过面纱向我们发言，教导我们，带领我们。良心是基督所有代表中的第一位代表。那些有德之人将受到教会政府的赞言，相反无德之人必遭惩罚。" 
+ LEC_pei_yang_you_de_zhi_ren_desc:0 "良心是我们心灵的法律，但超越我们的心灵，对我们发号施令，指示责任和职务，恐惧和希望...良心是自然界中，一如恩宠界中的那位传讯者，透过面纱向我们发言，教导我们，带领我们。良心是基督所有代表中的第一位代表。那些有德之人将受到教会政府的赞言，相反无德之人必遭惩罚。" 
  LEC_pu_shi_de_jiu_su:0 "普世的救赎"
  LEC_pu_shi_de_jiu_su_desc:0 "上帝是所有人的慈爱父母，耶稣基督的救赎乃是为普世全人类而作的，不管他是否虔诚，灵魂都终归上帝。" 
  LEC_shang_hai_zhi_shen:0 "上海之声"
@@ -1130,11 +1140,26 @@
  Shcjidu.25.d:0 "看来中国的混乱更近一步了，远东最大的城市上海今日爆发了一场剧烈的争斗战，最终由德国人扶持的上海天主教会取得了最终的胜利，他们正在接管这座城市的方方面面，用他们的法令规训这座繁华都市，无论如何中国舞台上的玩家又要多一个了。"
  Shcjidu.25.a:0 "日期满了，神的国近了。你们要悔改，信福音！"
  Shcjidu.26.t:0 "光与影之间"
- Shcjidu.26.d:0 "上午10点，工厂的汽笛准时响起，震动着砖墙与钢梁，将昨夜的湿气从空气中驱散。林海生放下手中的工具，活动了一下酸痛的肩膀，目光顺着灰蒙蒙的天光投向远方——码头、仓库、厂房，这些是他熟悉的世界，而现在，这个世界正悄然发生变化。\n\n几天前，教会派人来到工厂，在礼堂里召集工人们开了一次会。说是会，其实更像是一场布道。穿着黑色长袍的神父站在台上，双手交叠，语气温和却带着不容置疑的坚定：“你们的劳动是神圣的，主关怀每一个辛勤工作的人。我们将成立新的工会，为你们争取更合理的待遇，让你们不再受资本家的压榨。”\n\n林海生坐在人群里，双手环抱着胸口，眼神在神父与身旁的工友们之间游移。他从未信仰过什么神明，也从未想过自己的汗水和劳苦会被赋予“神圣”二字。他知道工会是什么——在过去，那些私下聚集的工人，哪怕只是多说一句工资太低，都会被巡捕房带走，棍棒和牢狱是他们的下场。而现在，教会要成立自己的工会，工头们却只是冷眼旁观，没有阻拦，甚至还在会后安抚大家：“神父们不会害你们。”\n\n他不相信这些话。\n\午休时，工友们围在一起讨论，有人兴奋，有人犹豫。“教会办工会，至少比资本家好吧？”一个年轻工人说，声音里带着几分期待，“他们不是说了吗？要给我们更好的待遇。”“待遇？”林海生冷笑了一声，抬手指了指天，“等他们真让老板加薪了，太阳都要从西边出来。”人群沉默了一瞬，有人低声道：“可这座城已经变了。”变了。是的，变了。自从教会接管上海，街上的赌场和烟馆被关闭，妓院成了“赎罪所”，原本夜夜狂欢的夜总会如今只剩下废弃的霓虹灯在风中晃荡。而现在，教会的手终于伸到了工厂里。“我只想知道，他们的工会，到底是为了谁？”林海生低声问，像是自言自语。\n\n没人能回答他。\n\n下午，神父们又来了。他们走过工厂的通道，黑色长袍在灰尘与机油的空气里显得格外醒目。工头亲自带着他们巡视，一边点头哈腰，一边向工人们介绍：“这是教会派来的代表，未来的工会负责人。”神父们微笑着，眼神穿过每一张疲惫的面孔，带着某种不容置疑的仁慈。林海生与其中一个神父对视了一瞬，那目光让他感到一种莫名的不安。他低下头，假装专注于手中的活计，而那道目光仍然落在他身上，仿佛要将他看透。"
+ Shcjidu.26.d:0 "上午10点，工厂的汽笛准时响起，震动着砖墙与钢梁，将昨夜的湿气从空气中驱散。林海生放下手中的工具，活动了一下酸痛的肩膀，目光顺着灰蒙蒙的天光投向远方——码头、仓库、厂房，这些是他熟悉的世界，而现在，这个世界正悄然发生变化。\n\n几天前，教会派人来到工厂，在礼堂里召集工人们开了一次会。说是会，其实更像是一场布道。穿着黑色长袍的神父站在台上，双手交叠，语气温和却带着不容置疑的坚定：“你们的劳动是神圣的，主关怀每一个辛勤工作的人。我们将成立新的工会，为你们争取更合理的待遇，让你们不再受资本家的压榨。”\n\n林海生坐在人群里，双手环抱着胸口，眼神在神父与身旁的工友们之间游移。他从未信仰过什么神明，也从未想过自己的汗水和劳苦会被赋予“神圣”二字。他知道工会是什么——在过去，那些私下聚集的工人，哪怕只是多说一句工资太低，都会被巡捕房带走，棍棒和牢狱是他们的下场。而现在，教会要成立自己的工会，工头们却只是冷眼旁观，没有阻拦，甚至还在会后安抚大家：“神父们不会害你们。”\n\n他不相信这些话。\n\n午休时，工友们围在一起讨论，有人兴奋，有人犹豫。“教会办工会，至少比资本家好吧？”一个年轻工人说，声音里带着几分期待，“他们不是说了吗？要给我们更好的待遇。”“待遇？”林海生冷笑了一声，抬手指了指天，“等他们真让老板加薪了，太阳都要从西边出来。”人群沉默了一瞬，有人低声道：“可这座城已经变了。”变了。是的，变了。自从教会接管上海，街上的赌场和烟馆被关闭，妓院成了“赎罪所”，原本夜夜狂欢的夜总会如今只剩下废弃的霓虹灯在风中晃荡。而现在，教会的手终于伸到了工厂里。“我只想知道，他们的工会，到底是为了谁？”林海生低声问，像是自言自语，没人能回答他。\n\n下午，神父们又来了。他们走过工厂的通道，黑色长袍在灰尘与机油的空气里显得格外醒目。工头亲自带着他们巡视，一边点头哈腰，一边向工人们介绍：“这是教会派来的代表，未来的工会负责人。”神父们微笑着，眼神穿过每一张疲惫的面孔，带着某种不容置疑的仁慈。林海生与其中一个神父对视了一瞬，那目光让他感到一种莫名的不安。他低下头，假装专注于手中的活计，而那道目光仍然落在他身上，仿佛要将他看透。"
  Shcjidu.26.a:0 "是保护，还是新的枷锁？"
  Shcjidu.27.t:0 "信仰与钢铁"
- Shcjidu.27.d:0 "工厂的炉火燃烧了一整夜，余热尚未散尽，空气中弥漫着焦灼的铁锈味。林海生坐在一堆刚锻造完的钢轨旁，双手搭在膝盖上，指尖还残留着灰烬。他盯着远方天际逐渐泛白的晨光，像是看着一片即将翻开的新书页，但他知道，这书页上写的字，未必是他想读的。\n\n在新工会成立的那天，教会在工厂礼堂里办了场隆重的仪式，神父们在圣像前宣读工会的宗旨，工头们毕恭毕敬地站在台下，资方的代表也来了，满脸堆笑地与神父们握手寒暄。林海生没有去——他不信教，也不信那些穿着长袍、手握圣书的人能真正改变工人的命运。可到了今天早晨，他却被工头点了名，派去市政厅修缮门前的铁栏杆。\n\n“工头特意挑了你。”同伴压低声音，语气有些怪异，“听说教会的人要来，工头说你手艺好，不能让那些神父看了笑话。”林海生冷哼了一声，拎起工具袋出了门。\n\n市政厅门前，工人们正在焊接栏杆，火花在晨光下迸溅，映亮了锈迹斑斑的铁柱。林海生蹲在一旁，目光扫过四周。这座城市的秩序已经变了，街上的巡逻队换上了教会的徽章，旧政府的旗帜被收起，连市政厅门口的石碑都刻上了新的铭文。“先生，这里灰尘很大，还有危险，您站远些。”他抬起头，看见一个穿着黑色长袍的男人站在不远处，目光平静地注视着他。那是一张陌生的脸，年轻，神色沉静，却带着几分疲倦。他的手上捧着一本厚重的《圣经》，但不知为何并没有被翻开，那人只是轻轻摩挲着封皮。\n\n“这位神父，您是来看工地的吗？”林海生随口问道，手上的活计没停。“我是来了解工人的情况。”男人答道，声音低沉，却带着不容忽视的力量。林海生嗤笑一声：“了解？神父，您怕是没在这行里待过吧？炉火烫不烫，锤子沉不沉，资本家的剥削狠不狠，工友们的日子好不好过，光靠看看是看不出来的。”男人沉默了一瞬，随后走到他的身旁，蹲下身，指尖触碰到尚未冷却的铁栏杆，微微皱眉。“很烫。”他说。“那是当然。”林海生淡淡道，“打铁的人就是这样，吃的是火里的饭。”\n\n男人看了他一眼，缓缓说道：“我叫费诺·张。”这名字让林海生的动作停顿了一瞬。他听过这个名字，在工人们私下里聊天中，在街头的布告栏上，传言说他是最虔诚的神父，为此常常与主教们发生争执，还有人说那两位总主教似乎对他也颇有意见。可如今，这个名声赫赫的人，却蹲在他身旁，像个普通人一样碰着未冷的铁栏杆。“神父。”林海生缓缓开口，带着犹豫又带着些许坚定道，“工人们都说，教会是新的主人，那个工会不过是新的枷锁。您怎么看？”费诺·张没有立刻回答，他沉默地注视着栏杆上的铁锈，良久，才低声说道：“工会本该保护工人，而非束缚他们。”林海生听出了他话中的犹豫。他突然觉得有些有趣——在这座被教会掌控的城市里，连神父都开始怀疑自己是否站在正确的一边了吗？\n\n他站起身，拍了拍身上的灰：“神父，我不懂什么大道理，我只知道一点——铁是火炼出来的，越烧越硬。你们的工会，到底是想让工人更硬气，还是更顺服？”费诺·张没有回答，只是望着他，眼中映着铁锈的颜色。林海生笑了笑，拾起工具，继续敲打着栏杆。铁锤落下，火花四溅，在晨光里映出一道耀眼的弧线。"
+ Shcjidu.27.d:0 "工厂的炉火燃烧了一整夜，余热尚未散尽，空气中弥漫着焦灼的铁锈味。林海生坐在一堆刚锻造完的钢轨旁，双手搭在膝盖上，指尖还残留着灰烬。他盯着远方天际逐渐泛白的晨光，像是看着一片即将翻开的新书页，但他知道，这书页上写的字，未必是他想读的。\n\n在新工会成立的那天，教会在工厂礼堂里办了场隆重的仪式，神父们在圣像前宣读工会的宗旨，工头们毕恭毕敬地站在台下，资方的代表也来了，满脸堆笑地与神父们握手寒暄。林海生没有去——他不信教，也不信那些穿着长袍、手握圣书的人能真正改变工人的命运。可到了今天早晨，他却被工头点了名，派去市政厅修缮门前的铁栏杆。“工头特意挑了你。”同伴压低声音，语气有些怪异，“听说教会的人要来，工头说你手艺好，不能让那些神父看了笑话。”林海生冷哼了一声，拎起工具袋出了门。\n\n市政厅门前，工人们正在焊接栏杆，火花在晨光下迸溅，映亮了锈迹斑斑的铁柱。林海生蹲在一旁，目光扫过四周。这座城市的秩序已经变了，街上的巡逻队换上了教会的徽章，旧政府的旗帜被收起，连市政厅门口的石碑都刻上了新的铭文。“先生，这里灰尘很大，还有危险，您站远些。”他抬起头，看见一个穿着黑色长袍的男人站在不远处，目光平静地注视着他。那是一张陌生的脸，年轻，神色沉静，却带着几分疲倦。他的手上捧着一本厚重的《圣经》，但不知为何并没有被翻开，那人只是轻轻摩挲着封皮。\n\n“这位神父，您是来看工地的吗？”林海生随口问道，手上的活计没停。“我是来了解工人的情况。”男人答道，声音低沉，却带着不容忽视的力量。林海生嗤笑一声：“了解？神父，您怕是没在这行里待过吧？炉火烫不烫，锤子沉不沉，资本家的剥削狠不狠，工友们的日子好不好过，光靠看看是看不出来的。”男人沉默了一瞬，随后走到他的身旁，蹲下身，指尖触碰到尚未冷却的铁栏杆，微微皱眉。“很烫。”他说。“那是当然。”林海生淡淡道，“打铁的人就是这样，吃的是火里的饭。”\n\n男人看了他一眼，缓缓说道：“我叫费诺·张。”这名字让林海生的动作停顿了一瞬。他听过这个名字，在工人们私下里聊天中，在街头的布告栏上，传言说他是最虔诚的神父，为此常常与主教们发生争执，还有人说那两位总主教似乎对他也颇有意见。可如今，这个名声赫赫的人，却蹲在他身旁，像个普通人一样碰着未冷的铁栏杆。“神父。”林海生缓缓开口，带着犹豫又带着些许坚定道，“工人们都说，教会是新的主人，那个工会不过是新的枷锁。您怎么看？”费诺·张没有立刻回答，他沉默地注视着栏杆上的铁锈，良久，才低声说道：“工会本该保护工人，而非束缚他们。”林海生听出了他话中的犹豫。他突然觉得有些有趣——在这座被教会掌控的城市里，连神父都开始怀疑自己是否站在正确的一边了吗？\n\n他站起身，拍了拍身上的灰：“神父，我不懂什么大道理，我只知道一点——铁是火炼出来的，越烧越硬。你们的工会，到底是想让工人更硬气，还是更顺服？”费诺·张没有回答，只是望着他，眼中映着铁锈的颜色。林海生笑了笑，拾起工具，继续敲打着栏杆。铁锤落下，火花四溅，在晨光里映出一道耀眼的弧线。"
  Shcjidu.27.a:0 "新秩序降临，可连信仰者都在疑问。"
+ Shcjidu.28.t:0 "晨祷钟声"
+ Shcjidu.28.d:0 "清晨六点，钟声从高耸的教堂钟楼传来，敲碎了天际最后一抹夜色。程一鸣站在晨祷队列里，悄悄活动着冻僵的手指，指尖蹭过衣袖，布料有些粗糙。远处的天光透过教堂彩绘玻璃洒落一地斑斓，圣母像的眼眸在晨光中微微泛亮，仿佛正慈悲地注视着他们。他低下头，和其他孩子一样合十双手，嘴唇微微开合，轻声跟随神父吟诵拉丁文的祷词。声音此起彼伏，像潮水一样在石砌的穹顶下回荡。他听见身旁的同学在祷告词最后一个音节落下时微不可察地舒了口气，双手从合十的姿势里慢慢松开。晨祷结束，所有人静默地退入走廊，脚步轻盈，擦过光滑的地砖，一丝尘埃也不曾扬起。\n\n课间，程一鸣坐在自己的座位上，手指轻轻点着课本边缘的烫金封皮。讲台上，神父翻开《圣经》，声音温和而坚定地诵读：“敬畏主是智慧的开端。”粉笔划过黑板，落下一串规整的文字。书页翻动，空气中带着纸张微微的墨香。他望向窗外，天光明亮，院墙外的远处，一排灰白的屋檐依稀可见，像某种模糊的记忆。他下意识地伸手去翻自己的书页，却停在了空白的一栏。旧课本上的插图、算术的公式、那些曾经写满注释的角落，此刻只剩下一片平整的纸面。同桌轻轻踢了踢他的椅脚，他怔了一下，抬起头，神父正望着他们这排的学生，目光温和，却不容置疑。他端正坐姿，低头继续阅读。指尖按住书页，力道不轻不重，仿佛生怕它在自己眼前消失。\n\n午后，孩子们被允许在修道院后的花园里休息。阳光透过藤蔓落下斑驳的光影，空气中混杂着青草的气息。他靠着一棵老树坐下，树皮粗粝，硌着脊背。他伸出手，在泥土上写下几个字母，又很快抹平。手心沾了些湿润的尘土，他轻轻拍了拍裤腿，指尖收紧，又松开。远处的钟楼又一次响起，悠长的钟声划破静谧的午后时光。程一鸣抬头望着那座高塔，阳光正缓缓攀上钟面的边缘，影子落在他的眼底，一晃而过。"
+ Shcjidu.28.a:0 "晨光如旧，而影子未曾离去。"
+ Shcjidu.29.t:0 "光明之城"
+ Shcjidu.29.d:0 "午后的阳光洒在外滩的欧式建筑上，金色的光斑透过梧桐叶落在整洁的石板路上。林仲贤穿着一身熨得笔挺的西装，手中拎着一根柚木手杖，缓步走在南京路上。两旁的洋行橱窗被擦得一尘不染，陈列着最新一批进口的瑞士钟表、高档香水，还有英伦裁缝店的高级呢绒西服。新近落成的教会公立医院门口，一队修女正在为贫苦人家派发面包和药品，围拢着他们的人群井然有序，不再像从前那样争抢推搡。\n\n街头巡警穿着笔挺的制服，偶尔吹响哨子，疏导人流。曾经横行无忌的青帮流氓已然销声匿迹，取而代之的是街角布道的神父，手持《圣经》，耐心地向来往的市民讲解教义。一个留着短发、穿着蓝色粗布旗袍的女学生驻足倾听，低头在本子上记下了几行字。\n\n林仲贤站在一家咖啡馆门口，点燃了一支英国烟草公司的“金丝猴”香烟，深深吸了一口，烟雾在鼻息间缓缓散开。外滩的钟楼敲响三下，沉稳的钟声回荡在空气中。晚餐时间，他坐在自家石库门洋房宽敞的餐厅里，墨绿色的绒布窗帘半掩着，天光从雕花窗棂间落下，映照着铺着白色蕾丝桌布的长餐桌。雕刻精美的银质餐具摆放整齐，烛光在杯壁上投下摇曳的光影。\n\n妻子身穿一袭浅色的杭绸旗袍，端庄地为他添了一杯红茶。茶水澄澈，琥珀色的光泽在杯中荡漾，空气中弥漫着伯爵茶的柑橘香气。孩子们规规矩矩地坐在桌旁，正用法式餐刀切着煎得外焦里嫩的牛排。女佣从厨房端上最后一道洋葱汤，动作利落，神情恭敬。“听说了吗？教会正在推动礼拜日的商铺闭市，所有人都可以去做弥撒。”妻子轻声说道，眉眼间透着几分满足。林仲贤点点头，举起酒杯晃了晃，“是啊，人人有敬拜主的机会，这才是应有的秩序。”\n\n他的思绪飘回今天上午经过的苏州河沿岸——过去那些成群结队的乞丐不见了，码头工人的工钱经过教会的调整，变得更为公道，他们在烈日下干活，却不再充满怨气。老旧的巷弄被整顿，门前再无肮脏不堪的水沟，沿街的铺子也一改往日的喧嚣，客人进出时都彬彬有礼。他抿了一口波尔多红酒，感受着醇厚的酒液滑入喉间，满意地叹了口气。\n\n夜晚，他站在阳台上，望向外滩的霓虹灯光与黄浦江上的倒影交错辉映。远处的十里洋场依然灯火辉煌，可昔日那些纸醉金迷的舞厅已被整顿，赌场彻底查封，取而代之的是传来阵阵圣咏的教堂和重新装修的书局。他曾担心失去夜上海的风华，但如今，他才发现真正的繁荣不是浮华灯影，而是稳定与秩序。他回到书房，翻开当天的《申报》，头版大标题赫然写着——“教会治下的上海：道德与秩序带来的新纪元”。林仲贤微微一笑，放下报纸，靠在绒布沙发上，闭上眼睛，听着远处教堂传来的钟声。"
+ Shcjidu.29.a:0 "这一刻，他从未如此安心。"
+ Shcjidu.30.t:0 "沉寂的夜上海"
+ Shcjidu.30.d:0 "黄昏时分，街头的霓虹灯依旧亮起，但少了几分过去的绚烂。百乐门的舞厅被改成了礼堂，门口站着志愿者，向路人派发传单，宣讲新的道德准则。霞飞路上的酒馆冷冷清清，门口竖着一块告示牌：“晚上十点后禁止营业”。\n\n周慕云穿着考究的西装，站在街头，点燃一支香烟，目光落在曾经灯火辉煌的“夜上海”歌舞厅上。这里曾是名媛交际的地方，而如今，木门紧闭，门楣上悬挂着教会布告：“远离声色之欲，归于主的光明。”\n\n他摇了摇头，把香烟摁灭在墙角。\n\n“先生，愿主祝福你。”一个年轻修士向他递上一本教义小册子，微微一笑。\n\n他接过来看了眼，转身消失在暮色之中。"
+ Shcjidu.30.a:0 "光明降临，夜色不再。"
+ Shcjidu.31.t:0 "繁荣昌盛"
+ Shcjidu.31.d:0 "清晨的外滩码头笼罩在薄雾之中，远处的钟楼敲响了六下，商船的汽笛声此起彼伏。陈德昌站在码头边，轻轻吸了口气，海风裹挟着咸湿的气息，混杂着货物的香味，令他感到久违的安心。\n\n过去的码头可不是这样的。每天装卸货物，少不了要“孝敬”帮会的兄弟，否则一船的货就能凭空“失踪”。每次进货，他都得先去找人打点，才能确保自己的面粉厂能正常运转。但现在，这一切都变了。\n\n“陈老板，这批货已经过了教会的检查，没问题了。”一个穿着整洁制服的管理员走过来，手里拿着一份文件，恭敬地递上去。\n\n陈德昌接过文件，粗糙的手指摩挲着封皮。这是教会新制定的贸易规章，一切都变得井井有条。只要按照规矩办事，再也不必担心货物被劫，或是被人半路截走。\n\n“好，运到面粉厂吧。”他挥挥手，几辆马车驶来，工人们熟练地将麻袋搬上车，动作利索，没有半点拖沓。从前，有时面粉还没出码头，就被帮派分了一半，如今，谁也不敢再插手教会的事务，秩序取代了混乱，而他这个本分做生意的人，也终于可以安稳地赚钱。\n\n陈德昌眯起眼，看着太阳透过晨雾，映照在江面上，泛起粼粼光辉。是的，这座城市变了，规矩多了，限制也多了，但对于他来说，这一切都是值得的。"
+ Shcjidu.31.a:0 "规矩带来秩序，秩序带来财富。"
+ Shcjidu.32.t:0 "金玉其外"
+ Shcjidu.32.d:0 "林海生摘下被铁屑染成褐色的帆布手套时，费诺正将烫伤药膏塞进他工具箱夹层。教会医院特有的石碳酸气味缠绕在两人之间，远处炼铁厂烟囱吐出的浓烟把徐家汇天主堂尖顶染成了灰褐色。\n\n“前日您说不知道工会是想让工人更硬气，还是更顺服？。”费诺的执事黑袍下摆沾着锅炉房煤灰，"这些磺胺粉总不是假的。”林海生没有看向他，只是自顾自的说着，“够六个烫伤弟兄换三天药。”林海生用扳手敲了敲安全告示牌，铁皮上‘安全生产荣耀主’的油漆字簌簌掉落，他看向费诺·张，“执事见过被钢水溅穿肺叶的人吗？教会给的抚恤金刚够买口薄棺。”\n\n费诺·张的银边眼镜蒙着水汽，三天前主教让他整理奉献箱账目，羊皮封面的账簿里夹着张泛黄收据：意大利大理石祭坛台花费二百四十银元，工人安全帽采购支出八银元。当时那位商会代表在走廊里清点复活节捐款，阴丹士林长衫袖口露出瑞士表带金光。\n\n而此刻林仲贤正在理事会会议室鼓掌，他是商会的代表，有权参与政策的制定。主席台上总司铎展示着新印制的《劳工权益手册》，烫金封皮下第二十七条用小字标注：“主日加班奉献金归教会所有”。他的掌声惊飞了窗外啄食的麻雀——那些鸟儿总爱聚集在炼铁厂围墙外，啄食工人们偷偷撒出来的霉米粒。\n\n费诺突然抓住他的手腕，神职人员修剪整齐的指甲掐进工人结痂的皮肉里：“今早我发现药房少了两盒盘尼西林。”这才是他来拜访的真正目的，但此时锅炉房汽笛发出三短一长的啸叫，这是工友约定的换班信号。林海生甩开他的手，没有回答这个问题，只是从工具箱底层抽出一份报纸，头版照片里林仲贤正与总司铎共饮香槟：“执事不妨查查那瓶酒钱能买多少盘尼西林。”\n\n费诺在子夜时分划亮第三根火柴。总务处铁柜里的账簿摊在膝头，钢笔尖悬在‘慈善支出’栏颤抖，当汽车碾过门外碎石路时，他终于下定决心在‘唱诗班礼服清洗费’项下添了行小字：工人子弟学堂冬季煤火费二十银元。\n\n晨祷钟声里，林海生将教会药房的纱布分发给夜班工友。裹着绷带的男人们传看着《工人周报》，那是自总工会被查封后，工人们为数不多的读物。费诺站在告解亭阴影中，听见总司铎的咆哮震落了圣水池上的玫瑰花瓣——他昨夜修改的账目使意大利彩玻璃窗采购预算出现了二十块银元的缺口。"
+ Shcjidu.32.a:0 ""若是你的右眼叫你跌倒，就剜出来丢掉"（马太福音5:29）"
 
 ###新教
  SHC_CHR: "上海总教区"
