--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -556,11 +556,11 @@
 
 
  guides.13.t:0 "两广指南"
- guides.13.d:0 "问：国民党左派？\n\n答：沈鸿英死后，在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择守住侧翼。\n在陈铭枢的决定事件中选择开始行动。这样可以避免内战。\n在国民党领导人会面事件中选择陈铭枢。\n\n问：联省派？\n\n答：在李宗仁入侵事件中选择保卫梧州。\n在焦头烂额事件中随意选择。选择撤退将使广东控制梧州。\n在陈铭枢的决定事件中选择李宗仁不过是一个骗子强盗。\n在粤桂战争中站在陈炯明一边。\n\n问：商团？\n\n答：在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择增援马济。\n在南宁战役事件中随意选择。选择求援将使广东控制桂林。\n在守灵事件中选择随从被枪杀。\n在陈炯明遇刺事件中选择陈廉伯，然后在粤桂战争中站在他一边，随后赢得内战即可。\n\n问：新桂系？\n\n答：同国民党左派路线，但在国民党领导人会面事件中选择李宗仁。\n\n问：旧桂系？\n\n答：同商团路线，但是内战中站在广西一边并取胜即可。\n\n问：百色起义？\n\n答：先帮旧桂系打赢国民党入侵，然后事件里选百色起义成功，接着内战胜利即可。"
+ guides.13.d:0 "问：国民党左派？\n\n答：沈鸿英死后，在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择守住侧翼。\n在陈铭枢的决定事件中选择开始行动。这样可以避免内战。\n在国民党领导人会面事件中选择陈铭枢。\n\n问：联省派？\n\n答：在李宗仁入侵事件中选择保卫梧州。\n在焦头烂额事件中随意选择。选择撤退将使广东控制梧州。\n在陈铭枢的决定事件中选择李宗仁不过是一个骗子强盗。\n在粤桂战争中站在陈炯明一边。\n\n问：商团、旧桂系、百色起义？\n\n答：在李宗仁入侵事件中选择出兵迎战。\n在梧州沦陷事件中选择增援马济。\n在南宁战役事件中随意选择。选择求援将使广东控制桂林。\n如果要进入百色起义就在起义事件中让广西起义成功，然后打内战。\n如果要进入商团或者旧桂系，就让起义失败。在守灵事件中选择随从被枪杀。\n在陈炯明遇刺事件中选择陈廉伯，然后在粤桂战争中站在他一边，旧桂系就选作为广西打内战。随后赢得内战即可。\n\n问：新桂系？\n\n答：同国民党左派路线，但在国民党领导人会面事件中选择李宗仁。或者让李宗仁入侵成功，然后内战选广西。"
  guides.13.a:0 "去中华民国界面"
  guides.13.b:0 "帅到"
  guides.55.t:0 "使馆城市指南"
- guides.55.d:0 "问：黑社会/商人/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/俄共？\n\n答：1、在黑色星期一中，不要对工人罢工妥协，然后让总工会。接下来的选举选你想玩的那个。2.让使馆城市破产，然后在上海火并的事件中选择总工会获胜。接下来的选举选你想玩的那个。\n\n注：黑帮中只有复辟大明有统一后（打下南京，便可以复辟）"
+ guides.55.d:0 "问：黑社会/商人/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/俄共？\n\n答：方法一：在黑色星期一中，不要对工人罢工妥协，然后让总工会。接下来的选举选你想玩的那个。\n方法二：让使馆城市破产，然后在上海火并的事件中选择总工会获胜。接下来的选举选你想玩的那个。"
  guides.55.a:0 "帅到"
  guides.78.t:0 "云南指南"
  guides.78.d:0 "问：龙云？\n\n答：如果唐继尧清洗总参谋部，或者共和派支持不足，或者没有向总参谋部认错，龙云就会掌权，但云南会开始内战。\n内战会有三种不同的情况，要以龙云身份赢得内战，请按照对应情况选择选项。\n在楚雄之战中，选择等待炮兵，然后在曲靖之战中选择保护谷口。\n在“攻占安顺”事件中，选择“就一天，不能再多了”，然后在毕节之战中选择分兵。\n在“防守毕节”事件中，选择防守城镇，然后在“攻克贵阳”事件中选择“猛攻贵阳，剑指清镇”。\n\n问：回民？\n\n答：让龙云打赢内战，然后完成国策中国化，在随后的事件里不要妥协硬刚到底，派陈果夫去大理。\n\n问：唐继尧怎么复辟大唐啊？\n\n答：先正常玩云南，别让他被政变（走左边的国策树，先准备对湖南发动战争，但别真得开战，然后别继续打，然后贿赂你的军队，然后和你的将军们在事件链上达成妥协或者不清洗他们)。然后就走孤立线，完成云南王国策，等到跳事件出来就好了。他可以统一中国，在三个美女里选一个做老婆，痛饮鸦片，然后嗝屁，让自己的老婆，遗子或者表亲上台。\n\n问：白族？\n\n答：走朱培德线，让他去大理吃鸿门宴"
