--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1159,7 +1159,7 @@
  Shcjidu.31.a:0 "规矩带来秩序，秩序带来财富。"
  Shcjidu.32.t:0 "金玉其外"
  Shcjidu.32.d:0 "林海生摘下被铁屑染成褐色的帆布手套时，费诺正将烫伤药膏塞进他工具箱夹层。教会医院特有的石碳酸气味缠绕在两人之间，远处炼铁厂烟囱吐出的浓烟把徐家汇天主堂尖顶染成了灰褐色。\n\n“前日您说不知道工会是想让工人更硬气，还是更顺服？。”费诺的执事黑袍下摆沾着锅炉房煤灰，"这些磺胺粉总不是假的。”林海生没有看向他，只是自顾自的说着，“够六个烫伤弟兄换三天药。”林海生用扳手敲了敲安全告示牌，铁皮上‘安全生产荣耀主’的油漆字簌簌掉落，他看向费诺·张，“执事见过被钢水溅穿肺叶的人吗？教会给的抚恤金刚够买口薄棺。”\n\n费诺·张的银边眼镜蒙着水汽，三天前主教让他整理奉献箱账目，羊皮封面的账簿里夹着张泛黄收据：意大利大理石祭坛台花费二百四十银元，工人安全帽采购支出八银元。当时那位商会代表在走廊里清点复活节捐款，阴丹士林长衫袖口露出瑞士表带金光。\n\n而此刻林仲贤正在理事会会议室鼓掌，他是商会的代表，有权参与政策的制定。主席台上总司铎展示着新印制的《劳工权益手册》，烫金封皮下第二十七条用小字标注：“主日加班奉献金归教会所有”。他的掌声惊飞了窗外啄食的麻雀——那些鸟儿总爱聚集在炼铁厂围墙外，啄食工人们偷偷撒出来的霉米粒。\n\n费诺突然抓住他的手腕，神职人员修剪整齐的指甲掐进工人结痂的皮肉里：“今早我发现药房少了两盒盘尼西林。”这才是他来拜访的真正目的，但此时锅炉房汽笛发出三短一长的啸叫，这是工友约定的换班信号。林海生甩开他的手，没有回答这个问题，只是从工具箱底层抽出一份报纸，头版照片里林仲贤正与总司铎共饮香槟：“执事不妨查查那瓶酒钱能买多少盘尼西林。”\n\n费诺在子夜时分划亮第三根火柴。总务处铁柜里的账簿摊在膝头，钢笔尖悬在‘慈善支出’栏颤抖，当汽车碾过门外碎石路时，他终于下定决心在‘唱诗班礼服清洗费’项下添了行小字：工人子弟学堂冬季煤火费二十银元。\n\n晨祷钟声里，林海生将教会药房的纱布分发给夜班工友。裹着绷带的男人们传看着《工人周报》，那是自总工会被查封后，工人们为数不多的读物。费诺站在告解亭阴影中，听见总司铎的咆哮震落了圣水池上的玫瑰花瓣——他昨夜修改的账目使意大利彩玻璃窗采购预算出现了二十块银元的缺口。"
- Shcjidu.32.a:0 ""若是你的右眼叫你跌倒，就剜出来丢掉"（马太福音5:29）"
+ Shcjidu.32.a:0 "“若是你的右眼叫你跌倒，就剜出来丢掉”（马太福音5:29）"
 
 ###新教
  SHC_CHR: "上海总教区"
