--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -727,10 +727,35 @@
  SHC_Sha_Xun: "维克托·沙逊"
  POLITICS_Sha_Xun_DESC:0 "维克多·沙逊爵士，第三代从男爵，是英籍犹太富商沙逊家族的第四代，商人及酒店经营者，塞法迪犹太人，来自富有的巴格达犹太人沙逊家族商人和银行家族。维克托爵士在第一次世界大战期间曾在皇家飞行队服役。他在1916年的一次飞机失事中幸存下来，但腿部受伤，这让他终生受苦。1924年，他的父亲去世，维克托继承了他的头衔，成为孟买第三代从男爵。他移居印度，在那里管理家族的纺织厂，并在印度立法议会任职。20世纪二三十年代，沙逊将大量财富从印度转移到中国上海，向当地经济投资了数百万美元，推动了上海的房地产繁荣。沙逊爵士经常在世界各地出差或旅游，他将时间分配在浦那、印度和上海两地。他收购了华懋地产公司、华懋酒店公司和至少50家其他公司。1929年，沙逊建造了华懋酒店以及其他大型酒店、办公楼和住宅，其中很多位于上海市中心的滨水区外滩(包括汉密尔顿大厦、新都城酒店和河堤)。他一度在外滩拥有1,800多处房产。是上海滩最富有的人。"
 
+ LEC_syndicalist_party_HD:0 "上海总工会"
+ LEC_syndicalist_party_HD_long:0 "旧工会残余"
+ LEC_radical_socialist_party_HD:0 "上海总工会"
+ LEC_radical_socialist_party_HD_long:0 "上海总工会(Shanghai Federation of Trade Unions)\n§g总工会经过新政府的改组之后基本丧失其作为工会应有的属性，而是转变为了一个彻彻底底的空壳。唯一的作用就是逢年过节能给加入工会的员工分发米面粮油等物品。§!"
+ LEC_social_democrat_party_HD:0 "何氏集团"
+ LEC_social_democrat_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
+ LEC_authoritarian_democrat_party_SX:0 "嘉道理家族"
+ LEC_authoritarian_democrat_party_SX_long:0 "嘉道理家族(Kadoorie Family)\n§g嘉道理家族是一个富裕的米兹拉希犹太族裔家族，祖先世居伊拉克首都巴格达。18世纪时迁居至印度孟买，19世纪在中国上海跟随沙逊家族发迹。他们成功建立欧亚商业王朝。连同上海的沙逊家族，嘉道理家族成为显赫的富豪家族。嘉道理家族在20世纪从英国人手上购入广州电力厂，但在广州的生意出现亏蚀，后来转到香港发展，并建成中华电力鹤园街电厂，主要供电给旗下酒店，艾利·嘉道理在电厂重组之后成为当时的大股东。§!"
+ LEC_social_conservative_party_HD:0 "沙逊家族"
+ LEC_social_conservative_party_HD_long:0 "沙逊家族(Sassoon family)\n§g沙逊家族（Sassoon family）是一个具有伊拉克犹太人血统的国际知名家族，原本以巴格达为根据地，后来迁移至印度孟买，再扩散至中国、英国及世界各地。虽然其起源并未十分明确，但一般认为他们具有中世纪安达鲁斯地区最富有家族之一的伊本·秀珊（Ibn Shoshans）家族的血统。自18世纪开始，沙逊家族便成为全世界最富有家族之一，经营的事业领域扩及亚洲大陆各地。1920年代，维克多·沙逊将经营重点从印度转移至中国上海。维克多爵士长期居住在印度浦那和上海两地，同时经常或因商务，或因娱乐，而周游世界。§!"
+ LEC_authoritarian_democrat_party_HD:0 "上海特别市警察局"
+ LEC_authoritarian_democrat_party_HD_long:0 "外籍佣兵(Ho Group)\n§g这些从海外流亡而来的家伙是最适合成为市政府的打手的家伙。除了钱，他们什么也不认。§!"
+ LEC_paternal_autocrat_party_HD:0 "何氏集团"
+ LEC_paternal_autocrat_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
+ LEC_national_populist_party_HD:0 "何氏集团"
+ LEC_national_populist_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
+
  LEC_help_lep:0 "何东选择与宁系合作"
  LEC_help_chi:0 "何东选择与国民党合作"
  LEC_help_gxc:0 "何东选择与两广军阀合作"
  LEC_help_QIE:0 "何东选择与直系军阀合作"
+ SHC_weapon_for_all_china_hidden:0 "暂时不查看我们的“贸易伙伴”"
+ SHC_buy_weapon_for_wrold_hidden:0 "暂时不查看我们的“贸易伙伴”"
+ SHC_our_money_to_where:0 "暂时不查看我们的收益能用来干什么"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_tt:0 "§Y我们将雇佣一支佣兵来扩充我们的军事力量§!"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_number_tt:0 "§Y我们将能招募更多佣兵§!"
+ SHC_xun_lian_yong_bing_tt:0 "佣兵质量将会提升"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_trigger_tt:0 "还能执行[?SHC_zhao_mu_wai_ji_gu_yong_bing_var]次"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_number_trigger_tt:0 "还能执行[?SHC_zhao_mu_wai_ji_gu_yong_bing_number_var]次"
  
  LEC_hei_hui_jing_ji:0 "黑灰经济"
  LEC_du_ping_mao_yi:0 "全球毒品贸易"
@@ -750,23 +775,29 @@
  LEC_civil_rights_all_or_nothing:0 "保卫上海"
  LEC_true_shambala:0 "佛陀之梦"
  LEC_industrial_peace_idea:0 "爱国企业家"
+ SHC_gu_yi_sheng_chan:0 "鼓励军火生产"
 
- LEC_syndicalist_party_HD:0 "上海总工会"
- LEC_syndicalist_party_HD_long:0 "旧工会残余"
- LEC_radical_socialist_party_HD:0 "上海总工会"
- LEC_radical_socialist_party_HD_long:0 "上海总工会(Shanghai Federation of Trade Unions)\n§g总工会经过新政府的改组之后基本丧失其作为工会应有的属性，而是转变为了一个彻彻底底的空壳。唯一的作用就是逢年过节能给加入工会的员工分发米面粮油等物品。§!"
- LEC_social_democrat_party_HD:0 "何氏集团"
- LEC_social_democrat_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
- LEC_authoritarian_democrat_party_SX:0 "嘉道理家族"
- LEC_authoritarian_democrat_party_SX_long:0 "嘉道理家族(Kadoorie Family)\n§g嘉道理家族是一个富裕的米兹拉希犹太族裔家族，祖先世居伊拉克首都巴格达。18世纪时迁居至印度孟买，19世纪在中国上海跟随沙逊家族发迹。他们成功建立欧亚商业王朝。连同上海的沙逊家族，嘉道理家族成为显赫的富豪家族。嘉道理家族在20世纪从英国人手上购入广州电力厂，但在广州的生意出现亏蚀，后来转到香港发展，并建成中华电力鹤园街电厂，主要供电给旗下酒店，艾利·嘉道理在电厂重组之后成为当时的大股东。§!"
- LEC_social_conservative_party_HD:0 "沙逊家族"
- LEC_social_conservative_party_HD_long:0 "沙逊家族(Sassoon family)\n§g沙逊家族（Sassoon family）是一个具有伊拉克犹太人血统的国际知名家族，原本以巴格达为根据地，后来迁移至印度孟买，再扩散至中国、英国及世界各地。虽然其起源并未十分明确，但一般认为他们具有中世纪安达鲁斯地区最富有家族之一的伊本·秀珊（Ibn Shoshans）家族的血统。自18世纪开始，沙逊家族便成为全世界最富有家族之一，经营的事业领域扩及亚洲大陆各地。1920年代，维克多·沙逊将经营重点从印度转移至中国上海。维克多爵士长期居住在印度浦那和上海两地，同时经常或因商务，或因娱乐，而周游世界。§!"
- LEC_authoritarian_democrat_party_HD:0 "上海特别市警察局"
- LEC_authoritarian_democrat_party_HD_long:0 "外籍佣兵(Ho Group)\n§g这些从海外流亡而来的家伙是最适合成为市政府的打手的家伙。除了钱，他们什么也不认。§!"
- LEC_paternal_autocrat_party_HD:0 "何氏集团"
- LEC_paternal_autocrat_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
- LEC_national_populist_party_HD:0 "何氏集团"
- LEC_national_populist_party_HD_long:0 "何氏集团(Ho Group)\n§g何氏集团主要由何东、何福、何甘棠三兄弟组成是何氏家族的私人集团，并未上市，主要经营领域包括银行、金融、航运等等§!"
+ SHC_weapon_for_all:0 "“军事”外交"
+ SHC_weapon_for_all_desc:0 "如今的中国深陷内乱之中，匪盗四起，军阀割据遍地，人民看不到希望。但是混乱对于另一些人而言同样也是机遇，广袤的市场就摆在我们的面前，我们所占据的上海市具有得天独厚的地位，内陆有着无数嗷嗷待哺的军阀们等着我们的军火将他们喂饱，不要着急，便宜、可靠的军火就在路上。"
+ SHC_hidden_weapon_for_all_china:0 "隐藏§g出售§!军火相关决议"
+ SHC_not_hidden_weapon_for_all_china:0 "显示§g出售§!军火相关决议"
+ SHC_weapon_for_all_china:0 "向[From.GetNameDef]出售军火"
+ SHC_hidden_buy_weapon_for_wrold:0 "隐藏§Y购买§!军火相关决议"
+ SHC_not_hidden_buy_weapon_for_wrold:0 "显示§Y购买§!军火相关决议"
+ SHC_buy_weapon_for_wrold:0 "从[From.GetNameDef]购买军火"
+ SHC_hidden_xun_lian_ta_men_de_jun_dui:0 "隐藏§P训练军阀军队§Y相关决议"
+ SHC_not_hidden_xun_lian_ta_men_de_jun_dui:0 "显示§P训练军阀军队§Y相关决议"
+ SHC_xun_lian_ta_men_de_jun_dui:0 "为[From.GetNameDef]训练军队"
+ SHC_hidden_our_money_to_where:0 "隐藏§R收益§Y相关决议"
+ SHC_not_hidden_our_money_to_where:0 "显示§R收益§Y相关决议"
+ SHC_Irrigation_decision:0 "扩大我们的城市"
+ SHC_build_army_factor_decision:0 "建设军工厂"
+ SHC_build_army_factor_decision_desc:0 "我们的军工厂将会为我们提供更多的军火，让我们的贸易更加强大。"
+ SHC_sheng_chan_zhi_shang:0 "生产至上，经济至上"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_number:0 "扩大佣兵规模"
+ SHC_xun_lian_yong_bing:0 "有钱能使鬼推磨"
+ SHC_xun_lian_yong_bing_desc:0 "我们将拿出更多的钱去雇佣更加精锐的佣兵。"
+ SHC_zhao_mu_wai_ji_gu_yong_bing:0 "招募外籍佣兵"
 
  LEC_zi_ben_jia_de_sheng_li:0 "最尊贵的何东爵士驾临他忠诚的上海"
  LEC_zi_ben_jia_de_sheng_li_desc:0 "随着最后一个抵抗者的倒下，何东爵士的雇佣兵终于扫清了上海市，今日凌晨何东爵士也亲自抵达了上海特别市，他发表了一番慷慨激昂的演讲，以表明自己对重建上海秩序的决心。"
